--- a/Savio/SavingPlanSetupCells/OfferTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/OfferTableViewCell.xib
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <customFonts key="customFonts">
+        <mutableArray key="GothamRounded-Light.otf">
+            <string>GothamRounded-Light</string>
+        </mutableArray>
         <mutableArray key="GothamRounded-Medium.otf">
             <string>GothamRounded-Medium</string>
             <string>GothamRounded-Medium</string>
@@ -15,14 +18,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="OfferTableViewCellIdentifier" rowHeight="60" id="KGk-i7-Jjw" customClass="OfferTableViewCell" customModule="Savio" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L0l-8t-2UG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="59" id="3Al-a9-SG6"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KgV-1d-7Kr">
                         <rect key="frame" x="0.0" y="8" width="320" height="12"/>
@@ -59,34 +65,101 @@
                         </constraints>
                         <state key="normal" image="offer-close.png"/>
                     </button>
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g6S-sn-vJh">
+                        <rect key="frame" x="0.0" y="72" width="320" height="20"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="Nr3-Jl-gBr"/>
+                        </constraints>
+                        <state key="normal">
+                            <attributedString key="attributedTitle">
+                                <fragment content="Offers details">
+                                    <attributes>
+                                        <color key="NSColor" red="0.94117647059999998" green="0.63137254899999995" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                                        <font key="NSFont" size="13" name="GothamRounded-Book"/>
+                                        <integer key="NSUnderline" value="1"/>
+                                    </attributes>
+                                </fragment>
+                            </attributedString>
+                        </state>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ShV-vt-USy">
+                        <rect key="frame" x="0.0" y="92" width="320" height="12"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFi-5t-bFq">
+                        <rect key="frame" x="0.0" y="104" width="320" height="21"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="Wnl-0I-7TF"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="13"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="KgV-1d-7Kr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="1TA-em-31X"/>
+                    <constraint firstAttribute="trailing" secondItem="g6S-sn-vJh" secondAttribute="trailing" id="20x-JX-pzE"/>
+                    <constraint firstItem="kFi-5t-bFq" firstAttribute="top" secondItem="L0l-8t-2UG" secondAttribute="bottom" constant="14" id="4hJ-tr-liY"/>
+                    <constraint firstItem="kFi-5t-bFq" firstAttribute="top" secondItem="g6S-sn-vJh" secondAttribute="top" id="Apo-1j-bqj"/>
+                    <constraint firstItem="ShV-vt-USy" firstAttribute="top" secondItem="g6S-sn-vJh" secondAttribute="bottom" id="D42-y0-hQU"/>
+                    <constraint firstItem="g6S-sn-vJh" firstAttribute="top" secondItem="L0l-8t-2UG" secondAttribute="bottom" constant="6" id="Ha7-Nu-14a"/>
                     <constraint firstItem="DKO-6w-Us3" firstAttribute="top" secondItem="KgV-1d-7Kr" secondAttribute="bottom" constant="14" id="INH-GC-uHS"/>
+                    <constraint firstItem="g6S-sn-vJh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="K1P-yr-pkU"/>
                     <constraint firstItem="ETB-mW-csM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="MIJ-Ep-7YC"/>
+                    <constraint firstAttribute="trailing" secondItem="kFi-5t-bFq" secondAttribute="trailing" id="PJh-7h-YUp"/>
                     <constraint firstItem="L0l-8t-2UG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="PnK-Lm-XbG"/>
+                    <constraint firstItem="kFi-5t-bFq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Rrt-QP-uJF"/>
                     <constraint firstAttribute="trailing" secondItem="gv0-X7-iDW" secondAttribute="trailing" id="Scm-g4-8yU"/>
-                    <constraint firstAttribute="bottom" secondItem="L0l-8t-2UG" secondAttribute="bottom" id="Vji-Mr-heA"/>
+                    <constraint firstAttribute="bottom" secondItem="kFi-5t-bFq" secondAttribute="bottom" constant="-1" id="VgY-Ah-TqJ"/>
+                    <constraint firstAttribute="bottom" secondItem="L0l-8t-2UG" secondAttribute="bottom" constant="65" id="Vji-Mr-heA"/>
+                    <constraint firstItem="kFi-5t-bFq" firstAttribute="top" secondItem="g6S-sn-vJh" secondAttribute="bottom" constant="-7" id="WEi-iL-20E"/>
                     <constraint firstAttribute="trailing" secondItem="L0l-8t-2UG" secondAttribute="trailing" id="avs-N1-iWs"/>
+                    <constraint firstItem="kFi-5t-bFq" firstAttribute="top" secondItem="g6S-sn-vJh" secondAttribute="bottom" id="dPV-PJ-2oA"/>
                     <constraint firstItem="KgV-1d-7Kr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="f1c-Tq-9I8"/>
+                    <constraint firstItem="kFi-5t-bFq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="104" id="fMR-nk-AkP"/>
                     <constraint firstItem="DKO-6w-Us3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="fwV-6b-1GW"/>
                     <constraint firstAttribute="trailing" secondItem="DKO-6w-Us3" secondAttribute="trailing" id="gNk-JF-vvM"/>
                     <constraint firstItem="gv0-X7-iDW" firstAttribute="top" secondItem="DKO-6w-Us3" secondAttribute="bottom" id="kEk-PN-WEQ"/>
                     <constraint firstItem="gv0-X7-iDW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mf0-8y-Oc0"/>
                     <constraint firstAttribute="trailing" secondItem="KgV-1d-7Kr" secondAttribute="trailing" id="oCf-yQ-7Qo"/>
+                    <constraint firstItem="ShV-vt-USy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="oXw-om-pv2"/>
+                    <constraint firstItem="g6S-sn-vJh" firstAttribute="top" secondItem="L0l-8t-2UG" secondAttribute="bottom" constant="3" id="og7-Ii-bxt"/>
+                    <constraint firstItem="kFi-5t-bFq" firstAttribute="top" secondItem="ShV-vt-USy" secondAttribute="bottom" id="pBA-SM-jXO"/>
                     <constraint firstAttribute="trailing" secondItem="ETB-mW-csM" secondAttribute="trailing" id="q65-xq-noC"/>
+                    <constraint firstAttribute="trailing" secondItem="ShV-vt-USy" secondAttribute="trailing" id="rgX-81-tka"/>
+                    <constraint firstItem="g6S-sn-vJh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="72" id="vcG-vO-6dL"/>
                     <constraint firstItem="L0l-8t-2UG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xJo-Og-4E8"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="Vji-Mr-heA"/>
+                        <exclude reference="Ha7-Nu-14a"/>
+                        <exclude reference="og7-Ii-bxt"/>
+                        <exclude reference="4hJ-tr-liY"/>
+                        <exclude reference="Apo-1j-bqj"/>
+                        <exclude reference="WEi-iL-20E"/>
+                        <exclude reference="dPV-PJ-2oA"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <connections>
+                <outlet property="blankLabel" destination="ShV-vt-USy" id="pXy-HJ-VSU"/>
                 <outlet property="closeButton" destination="ETB-mW-csM" id="68v-Nf-y00"/>
                 <outlet property="descriptionLabel" destination="gv0-X7-iDW" id="erb-o2-mTN"/>
-                <outlet property="offerDetailLabel" destination="DKO-6w-Us3" id="0BC-f2-aLP"/>
+                <outlet property="detailOfferLabel" destination="kFi-5t-bFq" id="HzB-9u-DSC"/>
+                <outlet property="detailOfferLabelHeight" destination="Wnl-0I-7TF" id="FwJ-9z-SYz"/>
+                <outlet property="offerDetailLabel" destination="DKO-6w-Us3" id="Fcv-Dz-rwz"/>
+                <outlet property="offerDetailsButton" destination="g6S-sn-vJh" id="HCk-8e-lMl"/>
                 <outlet property="offerImageView" destination="L0l-8t-2UG" id="o7g-iA-47L"/>
                 <outlet property="offerTitleLabel" destination="KgV-1d-7Kr" id="WyJ-Tz-7xs"/>
             </connections>
-            <point key="canvasLocation" x="416" y="245"/>
+            <point key="canvasLocation" x="416" y="244.5"/>
         </tableViewCell>
     </objects>
     <resources>
