--- a/Savio/RegistrationViewController/RegistrationCell/ButtonTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/ButtonTableViewCell.xib
@@ -28,8 +28,11 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yzl-e3-kmR">
-                        <rect key="frame" x="30" y="18" width="260" height="34"/>
+                        <rect key="frame" x="30" y="18" width="260" height="36"/>
                         <color key="backgroundColor" red="1" green="0.64705882349999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="36" id="ssv-3o-cf0"/>
+                        </constraints>
                         <state key="normal">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -47,6 +50,11 @@
                     <constraint firstItem="Yzl-e3-kmR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="dzg-Fx-aCN"/>
                     <constraint firstItem="FpA-Yr-0ry" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="xhU-E1-PoR"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="0Jr-b6-Rzs"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="btn" destination="Yzl-e3-kmR" id="0Vs-cu-gv5"/>
